ci(eslint.config.js): added linting rules for html and ts
added linting rules for html and ts so that it is stable in both pre-commit hook and CI workflow.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,14 +2,14 @@ name: Release
 
 on:
   workflow_run:
-    workflows: [ "CI" ]
-    branches: [ main ]
-    types: [ completed ]
+    workflows: ['CI']
+    branches: [main]
+    types: [completed]
 
 permissions:
-  contents: write       # create tags/CHANGELOG commits
-  issues: write         # comment on issues (semantic-release/github)
-  pull-requests: write  # comment on PRs (semantic-release/github)
+  contents: write # create tags/CHANGELOG commits
+  issues: write # comment on issues (semantic-release/github)
+  pull-requests: write # comment on PRs (semantic-release/github)
 
 jobs:
   semantic_release:
