--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,7 +35,7 @@ jobs:
         run: npm run lint
 
       - name: Unit tests (CI)
-        run: ng test --watch=false --browsers=ChromeHeadless
+        run: npm run test:ci
 
       - name: Production build
-        run: ng build --configuration=production
+        run: npm run build:prod
