--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,19 +1,19 @@
+# .github/workflows/release.yml
 name: Release
-
 on:
   workflow_run:
-    workflows: ['CI']
-    branches: [main]
+    workflows: ['CI'] # must match the CI workflow name exactly
     types: [completed]
+    branches: [main] # only when CI ran on main
 
 permissions:
-  contents: write # create tags/CHANGELOG commits
-  issues: write # comment on issues (semantic-release/github)
-  pull-requests: write # comment on PRs (semantic-release/github)
+  contents: write
+  issues: write
+  pull-requests: write
 
 jobs:
   semantic_release:
-    if: ${{ github.event.workflow_run.conclusion == 'success' }}
+    if: ${{ github.event.workflow_run.conclusion == 'success' && github.event.workflow_run.branch == 'refs/heads/main' }}
     runs-on: ubuntu-latest
     steps:
       - name: Checkout (full history for tags)
