--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
+    "test:ci": "ng test --watch=false --browsers=ChromeHeadless",
     "lint": "eslint . --ext .ts,.html --max-warnings=0",
     "format": "prettier --write .",
     "format:check": "prettier --check .",
