--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,10 +1,10 @@
 name: CI
 
 on:
-  pull_request:
-    branches: [main]
   push:
-    branches: ['**']
+    branches: ['**'] # CI on every branch including main
+  pull_request:
+    branches: [main] # CI on PRs targeting main
 
 permissions:
   contents: read
@@ -35,7 +35,7 @@ jobs:
         run: npm run lint
 
       - name: Unit tests (CI)
-        run: npm run test:ci
+        run: npm run test:ci # wraps: ng test --watch=false --browsers=ChromeHeadless
 
       - name: Production build
-        run: npm run build:prod
+        run: npm run build:prod # wraps: ng build --configuration=production
